src/config/loader/snapshots/unknown__config__loader__tests__malformed_project_file.snap
---
source: src/config/loader/tests.rs
assertion_line: 21
expression: report
---

  × Error parsing project/project.kdl

Error: 
  × child node `project` is required

