src/config/loader/snapshots/unknown__config__loader__tests__missing_task_file_error.snap
---
source: src/config/loader/tests.rs
expression: report
---

  × Path doesn't seem to exist: /Users/graeme/src/unknown/src/config/loader/
  │ test-data/missing-task-file/project/missing.nabs
   ╭─[project/project.kdl:3:1]
 3 │ tasks {
 4 │     import "missing.nabs"
   ·            ───────┬──────
   ·                   ╰── the path is referenced here
 5 │ }
   ╰────
  help: paths can be relative to the current file or absolute to the root of
        the workspace

